# jp-router

./: .gitignore  Cargo.toml
backend/: Cargo.toml  edit
backend/src/: acme_verify.rs  config.rs  dhcp_leases.rs  dynamic_dns.rs  error.rs  google.rs  main.rs  misc.rs  networks.rs
backend/src/google/: auth.rs  dns.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  styles.scss
frontend/src/: dhcp_leases.rs  home.rs  interfaces.rs  main.rs  nav.rs  route.rs  template.rs
web/: index.html
