[package]

	name = "jp-router-backend"
	version = "0.1.0"
	edition = "2021"

[dependencies]

	anyhow = "*"
	arcstr = { version = "*", features = [ "serde" ] }
	axum = { version = "*", features = [ "json" ] }
	axum-extra = { version = "*", features = [ "typed-header" ] }
	chrono = "*"
	google-cloud-auth = "*"
	google-cloud-token = "*"
	headers = "*"
	http = "*"
	percent-encoding = "*"
	reqwest = "*"
	rust-embed = "*"
	serde = { version = "*", features = [ "derive", "rc" ] }
	serde_json = "*"
	serde_yaml = "*"
	thiserror = "*"
	tokio = { version = "*", features = [ "macros", "net", "rt-multi-thread", "signal" ] }
	tower = "*"
	tower-http = { version = "*", features = [ "cors" ] }

	jp-router-common = { path = "../common" }
