[package]

	name = "jp-router-backend"
	version = "0.1.0"
	edition = "2021"

[dependencies]

	anyhow = "*"
	arcstr = { version = "*", features = [ "serde" ] }
	axum = { version = "*", features = [ "json" ] }
	axum-extra = { version = "*", features = [ "typed-header" ] }
	chrono = "*"
	futures = "*"
	google-cloud-auth = "*"
	google-cloud-token = "*"
	headers = "*"
	http = "*"
	itertools = "*"
	log = "*"
	netlink-packet-core = "*"
	netlink-packet-route = "*"
	netlink-proto = "*"
	percent-encoding = "*"
	pretty_env_logger = "*"
	reqwest = "*"
	rust-embed = "*"
	serde = { version = "*", features = [ "derive", "rc" ] }
	serde_json = "*"
	serde_yaml = "*"
	systemd-journal-logger = "*"
	thiserror = "*"
	tokio = { version = "*", features = [ "macros", "net", "rt-multi-thread", "signal" ] }
	tower = "*"
	tower-http = { version = "*", features = [ "cors" ] }

	jp-router-common = { path = "../common" }
