[package]

	name = "jp-router-frontend"
	version = "0.1.0"
	edition = "2021"

[dependencies]

	anyhow = "*"
	arcstr = "*"
	chrono = "*"
	gloo = "*"
	gloo-net = "*"
	log = "*"
	serde = { version = "*", features = [ "derive" ] }
	serde_json = { version = "*" }
	wasm-bindgen-futures = "*"
	wasm-logger = "*"
	yew = { version = "*", features = [ "csr" ] }
	yew-hooks = "*"
	yew-router = { version = "*" }

	jp-router-common = { path = "../common" }
